src/main/resources/META-INF/resources/rbs/css/rbs.css
@import url('//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.5/css/bootstrap.min.css');
@import url('//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.4.0/css/font-awesome.min.css');

/* don't allow selection of text in this class- used everywhere */
.no-select {
    -webkit-touch-callout: none;
    -webkit-user-select: none;
    -khtml-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
}

.sm-margin-left {
    margin-left: 0.3em;
}

.sm-margin-top {
    margin-top: 0.3em;
}

.sm-margin-right {
    margin-right: 0.3em;
}

.sm-margin-bottom {
    margin-bottom: 0.3em;
}

.md-margin-left {
    margin-left: 0.6em;
}

.md-margin-top {
    margin-top: 0.6em;
}

.md-margin-right {
    margin-right: 0.6em;
}

.md-margin-bottom {
    margin-bottom: 0.6em;
}

/* fix spacing between the alert strong and alert text */
.alert > .alert-strong + .alert-text {
    margin-left: 0.3em;
}


/* apply font smoothing everywhere */
body {
    -webkit-font-smoothing: antialiased;
    text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.004);
}

.btn > * + .caret {
    margin-left: 0.3em !important;
}

/* no resizing of textarea in forms */
textarea.form-control {
    resize: none;
}

/*
form-group checkboxes
*/
.form-group > input[type="checkbox"].form-control {
    float: left;
    margin-right: 0.3em;
    height: initial;
    width: initial;
}

/* default loading wrapper styling */
.loading-indicator-container {
    position: relative;
}

.loading-indicator-container .loading-indicator-backdrop {
    background-color: rgba(0, 0, 0, 0.1);
    z-index: 1000;
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
}

.loading-indicator-container .loading-indicator {
    position: absolute;
    z-index: 1001;
    top: 35%;
    left: 50%;
    margin-left: -50px;
    width: 100px;
    text-align: center;
}

/*
 Anything that comes before a glyphicon should have some space to the right of it
*/
.fa + * {
    margin-left: 0.4em;
}

* + .fa {
    margin-left: 0.4em;
}

.navbar-text {
    padding-left: 1em;
}

/**
Modals display always. We use transition groups to manage whether they're visible,
so they're removed from the DOM when they're not
*/
.modal {
    display: block !important;
    overflow-y: inherit !important;
}

.modal .modal-dialog .modal-title {
    overflow-x: hidden;
    -ms-text-overflow: ellipsis;
    text-overflow: ellipsis;
}

.Modal-backdrop {
    background-color: rgba(0, 0, 0, 0.3);
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    z-index: 1040;
}

/* dropdown menus display always, using transition groups to manage whether they're visible */
.dropdown-menu {
    display: block !important;
}

/*table stuff*/
.sortable-column-header {
    cursor: pointer;
    white-space: nowrap;
}

@media (max-width: 768px) {
    table.table-responsive-horizontal {
        table-layout: fixed;
    }

    table.table-responsive-horizontal > tbody > tr > td > span {
        display: inline-block;
        overflow-x: hidden;
        -ms-text-overflow: ellipsis;
        text-overflow: ellipsis;
        vertical-align: middle;
        width: 80%;
    }

    table.table-responsive-horizontal > thead {
        display: none;
    }

    table.table-responsive-horizontal > tbody > tr > td::before {
        content: attr(data-title);
        display: inline-block;
        text-align: right;
        padding-right: 0.5em;
        width: 20%;
        vertical-align: middle;
        font-weight: bolder;
        overflow-x: hidden;
        -ms-text-overflow: ellipsis;
        text-overflow: ellipsis;
    }

    table.table-responsive-horizontal > tbody > tr {
        border: 0.1em solid gray;
    }

    table.table-responsive-horizontal > tbody > tr > td {
        display: block;
    }
}

/* Tooltips */
.tip-container {
    position: relative;
    cursor: pointer;
    z-index: 1;
}

/* the arrow */
.tip-container:before {
    content: "";
    position: absolute;
    width: 0;
    height: 0;
    display: block;
    opacity: 0;
    border: 0.25em solid transparent;
    visibility: hidden;
    -webkit-transition: opacity 250ms, visibility 250ms;
    -moz-transition: opacity 250ms, visibility 250ms;
    -ms-transition: opacity 250ms, visibility 250ms;
    -o-transition: opacity 250ms, visibility 250ms;
    transition: opacity 250ms, visibility 250ms;
}

.tip-container.tip-container-open:before {
    opacity: 1;
    visibility: visible;
}

.tip-container.tip-top:before {
    left: 50%;
    margin-left: -0.25em;
    border-top-color: rgba(33, 37, 41, 0.9);
    bottom: 100%;
}

.tip-container.tip-right:before {
    left: 100%;
    top: 50%;
    margin-top: -0.25em;
    border-right-color: rgba(33, 37, 41, 0.9);
}

.tip-container.tip-bottom:before {
    top: 100%;
    left: 50%;
    margin-left: -0.25em;
    border-bottom-color: rgba(33, 37, 41, 0.9);
}

.tip-container.tip-left:before {
    right: 100%;
    top: 50%;
    margin-top: -0.25em;
    border-left-color: rgba(33, 37, 41, 0.9);
}

/* the actual tip */
.tip-container .tip {
    min-width: 10em;
    text-align: center;
    position: absolute;
    background-color: rgba(33, 37, 41, 0.9);
    color: white;
    padding: 0.4em;
    border-radius: 0.2em;
    display: block;
    opacity: 0;
    visibility: hidden;
    -webkit-transition: opacity 250ms, visibility 250ms;
    -moz-transition: opacity 250ms, visibility 250ms;
    -ms-transition: opacity 250ms, visibility 250ms;
    -o-transition: opacity 250ms, visibility 250ms;
    transition: opacity 250ms, visibility 250ms;
}

.tip-container.tip-container-open .tip {
    opacity: 1;
    visibility: visible;
}
/* ... */

